--- a/public/home/index.html
+++ b/public/home/index.html
@@ -7,7 +7,7 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
 
   <title>home</title>
-  <link rel="canonical" href="/%22/%22/home/">
+  <link rel="canonical" href=""/"/%22/%22/home/">
 
   <link href="https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,700" rel="stylesheet" type="text/css">
 
@@ -20,6 +20,22 @@
   <script async custom-element="amp-accordion" src="https://cdn.ampproject.org/v0/amp-accordion-0.1.js"></script>
 </head>
 <body class="home">
+
+<amp-analytics type="googleanalytics" id="analytics-ga">
+  <script type="application/json">
+  {
+    "vars": {
+      "account": "Your Google Analytics tracking code"
+    },
+    "triggers": {
+      "trackPageview": {
+        "on": "visible",
+        "request": "pageview"
+      }
+    }
+  }
+  </script>
+</amp-analytics>
 
 <amp-sidebar id='sidebar' side='right' layout='nodisplay'>
   <button class="tab hamburger" id="menu-button" on='tap:sidebar.toggle'></button>
@@ -40,8 +56,8 @@
     <div class="container">
       <div class="nav-container">
          <div class="left-nav">
-            <a href="/" class="tab header-title">
-              <span>Agency</span>
+            <a href=""/"/" class="tab header-title">
+              <span>Melaka Kini</span>
             </a>
         </div>
         <div class="right alt">
@@ -83,7 +99,7 @@ So if I used <strong>bold</strong> Oh that&rsquo;s cool. Appernetic allows me to
       <div class="container">
         <div class="row">
           <div class="twelve columns">
-             powered by <a href="http://gohugo.io" target="_blank">hugo</a> theme <a href="https://github.com/pdevty/amp" target="_blank">amp</a> designed by <a href="http://pdevty.github.io" target="_blank">pdevty</a>
+            (c) 2017 Melaka Kini. powered by <a href="http://gohugo.io" target="_blank">hugo</a> theme <a href="https://github.com/pdevty/amp" target="_blank">amp</a> designed by <a href="http://pdevty.github.io" target="_blank">pdevty</a>
           </div>
         </div>
       </div>
